# agentic-rag

./: .gitignore  .mcp.json  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.mcp  auth.py  main.py  mcp_server.py  pyproject.toml
backend/db/: api_keys_schema.sql  client.py  schema.sql  seed.py
backend/routes/: api_keys.py  chat.py  context.py  conversations.py  documents.py  drop.py  evaluation.py  folders.py  notes.py
backend/services/: chunker.py  embeddings.py  evaluation.py  ingestion.py  metadata.py  parser.py  query.py  rag.py  rerank.py  scope.py  search.py  text_to_sql.py  tools.py  web_search.py
docs/superpowers/plans/: 2026-03-10-mcp-api-key-auth-plan.md  2026-03-10-module1-app-shell.md
docs/superpowers/specs/: 2026-03-10-mcp-api-key-auth-design.md  2026-03-10-module1-app-shell-design.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/components/: AppLayout.tsx  AuthProvider.tsx  ChatArea.test.tsx  ChatArea.tsx  ChatInput.test.tsx  ChatInput.tsx  ContextPanel.test.tsx  ContextPanel.tsx  ConversationsProvider.tsx  DocumentCard.test.tsx  DocumentCard.tsx  FolderTree.tsx  IconRail.test.tsx  IconRail.tsx  IngestionDrawer.test.tsx  IngestionDrawer.tsx  MessageBubble.test.tsx  MessageBubble.tsx  MoveDialog.tsx  ProtectedRoute.tsx  Sidebar.tsx  ThinkingBar.test.tsx  ThinkingBar.tsx
frontend/src/contexts/: AuthContext.ts
frontend/src/hooks/: ConversationsContext.tsx  useConversations.ts  useConversationsContext.ts  useDocuments.ts  useIngestionStatus.ts
frontend/src/lib/: api.ts
frontend/src/pages/: ChatPage.tsx  ContextPage.tsx  DocumentsPage.tsx  LoginPage.test.tsx  LoginPage.tsx  NotesPage.tsx  SettingsPage.tsx
frontend/src/test/: renderWithProviders.tsx
supabase/: config.toml
