[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10.0"
dependencies = [
    "anthropic>=0.84.0",
    "fastapi>=0.135.1",
    "pyjwt[crypto]>=2.11.0",
    "python-dotenv>=1.2.2",
    "supabase>=2.28.0",
    "uvicorn[standard]>=0.41.0",
    "voyageai>=0.3.7",
]
